2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_stop_playing)
	(controller_quit_app): Don't update the window when the app is
	about to be shut down. This fixes a crash in Moblin.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac: Enable dbus support for Moblin
	* moblin/*: Remove unnecessary files.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-bookmark-window.c (drag_end_cb, find_bookmark_by_id)
	(play_selected_row, edit_button_clicked, delete_button_clicked):
	Use gtk_tree_model_get() instead of gtk_tree_model_get_value()

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* vagalumectl.1: Minor updates to the man page.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am
	* data/vagalume.desktop.in (X-Window-Icon): Use PIXMAPDIR instead
	of ICONDIR, which is no longer used.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* data/vagalume.desktop.in
	* data/vagalume.desktop.maemo
	* data/vagalume.desktop.moblin
	* Makefile.am (data/vagalume.desktop): Create a different .desktop
	file in each platform.

2008-08-29  Alberto Garcia  <agarcia@igalia.com>

	* INSTALL
	* Makefile.am
	* configure.ac
	* src/vgl-main-window.c: Add support for Moblin-based devices with
	a resolution of 800x480

2008-08-28  Alberto Garcia  <agarcia@igalia.com>

	* src/controller.c (controller_run_app): Use a weak pointer to set
	tray_icon to NULL.

2008-08-28  Alberto Garcia  <agarcia@igalia.com>

	* src/vgl-main-window.c
	(vgl_main_window_init)
	(vgl_main_window_destroy): Don't call
	gtk_main_quit() after destroying the window, let the handler of
	the "destroy" signal do it.

	* src/controller.c (controller_run_app): Use a weak pointer to set
	mainwin to NULL after it has been destroyed.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/util.c (lastfm_url_encode): Minor updates.

	* TODO: Update TODO file.

2008-08-18  Alberto Garcia  <agarcia@igalia.com>

	* src/playlist.h