@@ -1,5 +1,10 @@
 2008-08-29  Alberto Garcia  <agarcia@igalia.com>
 
+	* debian/rules: Change the variable used to choose the target
+	platform.
+
+2008-08-29  Alberto Garcia  <agarcia@igalia.com>
+
 	* src/controller.c (controller_stop_playing)
 	(controller_quit_app): Don't update the window when the app is
 	about to be shut down. This fixes a crash in Moblin.
